--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
             <div class="container">
 
                 <div class="task-list">
+                    <div class="new-task">
+                        <input type="text" placeholder="inserisci nuova cosa da fare" v-model="newTask">
+                        <button class="cta" @click="pushTask">
+                            <span class="hover-underline-animation">Aggiungi</span>
+                            <svg viewBox="0 0 46 16" height="10" width="30" xmlns="http://www.w3.org/2000/svg" id="arrow-horizontal">
+                                <path transform="translate(30)" d="M8,0,6.545,1.455l5.506,5.506H-30V9.039H12.052L6.545,14.545,8,16l8-8Z" data-name="Path 10" id="Path_10"></path>
+                            </svg>
+                        </button>
+                        <!-- <button @click="pushTask">Aggiungi</button> -->
+                    </div>
                     
                     <ul>
                         <li v-for="(element, index) in taskList">
